Minor pride updates

--- a/about/board.html
+++ b/about/board.html
@@ -24,35 +24,23 @@ layout: default
                         </ul>
                     </div>
                 </div>
-                <h2>Community Engagment Committee</h2>
-                <div class='row-fluid'>
-                    <div class='span12'>
-                        <ul class='thumbnails board'>
-                            {% include person.html name="Kerry Givens" role="Executive Director, South Minneapolis YMCA" no_email=true %}
-                            {% include person.html name="Neda Kellogg" role="Founder and CEO, Project Diva" no_email=true %}
-                        </ul>
-                    </div>
-                </div>
+
                 <h3>Board Meetings</h3>
                 <div class='row-fluid'>
                     <div class='span6'>
                         <p>
-                            The Board of Directors meets the 4th Wednesday of August, October, January, March and June at
-                            <i>5:30pm.</i>
+                            Our board meets on the fourth Wednesday of October, January, March, June and August from 5:30-7:00pm.
                         </p>
                         <p>
-                            The Finance Committee meets the 3rd Tuesday of every month at
-                            <i>5:30pm.</i>
+                            Our executive committee meets on the third Tuesday of every month from 9:00-10:00am.
                         </p>
                         <p>
-                            The Governance Committee will meet 11/7/17, 1/16/18, 3/7/18, 7/17/18, 9/18/18, and 11/13/18 at
-                            <i>3pm.</i>
+                            Our governance committee meets on the second Tuesday of every other month (February, April, June, August, October, December) from 9:00-10:00am.
                         </p>
                     </div>
                     <div class='span6'>
                         <p>
-                            The Executive Committee will meet the 3rd Tuesday of Sept, November, February, April, and July at
-                            <i>9am.</i>
+                            Our finance committee meets on the third Tuesday of every month from 8:00-9:00am.
                         </p>
                         <p>
                             All meetings are held at Prodeo Academy.
