--- a/about/who_we_are.html
+++ b/about/who_we_are.html
@@ -11,13 +11,13 @@ layout: default
                 <!--<p class='center'>
                     <img src='/assets/about/whoweare.jpg'>
                 </p>-->
-                <p class='lead'>Prodeo Academy is a K-8, free, public charter school in Minneapolis. From the first day of kindergarten, we are preparing our children for college. Prodeo Academy is a rigorous, meaningful education solution in North Minneapolis.</p>
+                <p class='lead'>Prodeo Academy is a PK-4, free, public charter school in Minneapolis. From the first day of kindergarten, we are preparing our children for college. Prodeo Academy is a rigorous, meaningful education solution in North Minneapolis.</p>
                 <p class='lead2 center'>
-                    Everything we do at Prodeo Academy, both in and out of<br>the classroom, is based on our Five Core Values:
+                    Everything we do at Prodeo Academy, both in and out of<br>the classroom, is based on our Five Core Values: PRIDE
                     <br>
-                    <b>Knowledge, Conscientiousness, Compassion, Integrity,</b>
+                    <b>Perseverance, Respect, Integrity, Development,</b>
                     and
-                    <b>Respect.</b>
+                    <b>Enthusiasm.</b>
                 </p>
                 <p class='lead2'>
                     At Prodeo Academy, every student is engaged in learning. We provide individualized instruction for every child. Excellence is our standard, for both students and teachers. At Prodeo Academy we close the achievement gap by using the best practices in education from the top academic schools in the country. Results matter:
