--- a/approach/core_values.html
+++ b/approach/core_values.html
@@ -12,13 +12,13 @@ layout: default
                     <div class='span12'>
                         <img src='/assets/approach/core_values.jpg'>
                         <p class='lead center' id='values'>
-                            Knowledge
-                            Conscientiousness
+                            Perseverance
                             Respect
-                            Compassion
                             Integrity
+                            Development
+                            Enthusiasm
                         </p>
-                        <p>These five values inform and inspire everything we do at Prodeo Academy. In Latin, Prodeo means "to advance" or "go forward", and at Prodeo Academy, we believe in the growth of the whole person.</p>
+                        <p>These five values (PRIDE) inform and inspire everything we do at Prodeo Academy. In Latin, Prodeo means "to advance" or "go forward", and at Prodeo Academy, we believe in the growth of the whole person.</p>
                         <p>It is extremely important to prepare our students for success in school, as well as in their personal and future professional life. Building a foundation together with families, Prodeo Academy students and staff honor and embrace a learning environment founded upon five core values.</p>
                     </div>
                 </div>
