--- a/results/index.html
+++ b/results/index.html
@@ -10,7 +10,7 @@ layout: default
                 <h2>Meaningful and Measurable Results</h2>
                 <div class='row-fluid'>
                     <div class='span7'>
-                        <p>We are excited about the tremendous growth our students continue to experience since starting with us at the end of August. Fewer than 20% of our students were on grade level in September, and after just over two months at Prodeo Academy, 88% of our scholars were on grade level with 62% of those advanced. As of February, we are happy to report that 38% of our students have already passed an end of Kindergarten assessment and are now working on First Grade level material.</p>
+                        <p>We are excited about the tremendous growth our students continue to experience since starting with us. Last year we learned that scholars who transferred to us from other schools were making an average of .67 years of growth. Those same scholars made an average of 1.43 years of growth at Prodeo. They also show growth in living our PRIDE values.</p>
                         <img src='/assets/results/results.png'>
                         <p>The STEP Assessment was developed at the University of Chicago Urban Education Institute. It is used in high-performing schools across the country as a means to analyze student data and plan for instruction.</p>
                     </div>
