--- a/student_life/community_meeting.html
+++ b/student_life/community_meeting.html
@@ -8,7 +8,7 @@ layout: default
         <div class='span12 panel' id='panel-main'>
             <div class='content'>
                 <h2>Community Meetings</h2>
-                <p>Every Friday, our whole school community gathers in the gym from 1:25-1:55 PM for Community Meeting. We celebrate the successes of our week, learn about the academics that each grade level is working on, explore what our values of Conscientiousness, Compassion, Knowledge, Integrity, and Respect look like in action, and honor a scholar who demonstrates our values in an exemplary way. Parents and visitors are always welcome to attend.</p>
+                <p>Every Friday, our whole school community gathers in the gym from 1:25-1:55 PM for Community Meeting. We celebrate the successes of our week, learn about the academics that each grade level is working on, explore what our values of Perseverance, Respect, Integrity, Development, and Enthusiasm (PRIDE) look like in action, and honor a scholar who demonstrates our values in an exemplary way. Parents and visitors are always welcome to attend.</p>
                 <h3>Spirit Stick</h3>
                 <p>The highlight of Community Meeting is when a teacher awards the Spirit Stick. The Spirit Stick winner is chosen because their actions during the week best embodied the Prodeo Academy values. The winning scholar proudly keeps the Spirit Stick in his or her classroom during the week and passes it on at the next Community Meeting. Thy also have a special video made about them that highlights everything that is special about them and is shown to the whole school.</p>
                 <div class='row-fluid'>
