Update staff and partners pages

--- a/about/partners.html
+++ b/about/partners.html
@@ -14,58 +14,72 @@ layout: default
             <div class='content'>
                 <h2>Our Partners</h2>
                 <p>
-                    <i>Thank you to all the individuals, corporations, and foundations that have contributed services and support.</i>
+                    <i>Thank you to all the corporations and foundations that have contributed services and support.</i>
                 </p>
                 <div class='row-fluid'>
-                    <div class='span5'>
-                        <p>
-                            <b>Support from Individuals</b>
-                        </p>
-                        <ul class='unstyled'>
-                            <li><i>Dane and Carolyn Anderson</i></li>
-                            <li><i>Tony Bruess</i></li>
-                            <li><i>Greg and Jane Goven</i></li>
-                            <li><i>John and Nancy Lawlor</i></li>
-                            <li><i>Chad and Julie Lindbloom</i></li>
-                            <li><i>Mary McGreevy</i></li>
-                            <li><i>Mary Sue Payne</i></li>
-                            <li><i>Pat and Ann Ryan</i></li>
-                            <li><i>Lowell Stortz</i></li>
-                            <li><i>Steve and Carolyn Weiby</i></li>
-                            <li><i>John and Margie Wiehoff</i></li>
-                        </ul>
-                        <br>
-                        <p>
-                            <b>Tutoring Partners</b>
-                        </p>
-                        <ul class='unstyled'>
-                            <li><i>A&amp;P Construction</i></li>
-                            <li><i>General Mills</i></li>
-                            <li><i>Leonard Street Deinard</i></li>
-                            <li><i>Meristem</i></li>
-                            <li><i>Ryan Companies</i></li>
-                            <li><i>Target</i></li>
-                        </ul>
-                    </div>
                     <div class='span7'>
                         <p>
                             <b>Support from Corporations and Foundations</b>
                         </p>
                         <ul class='unstyled'>
+                            <li><i>Albright Foundation</i></li>
                             <li><i>Amelia Ann Photography</i></li>
+                            <li><i>Apex</i></li>
+                            <li><i>Bassford Remele</i></li>
+                            <li><i>Bell Mortgage</i></li>
+                            <li><i>Bentson Foundation</i></li>
                             <li><i>Boston Scientific</i></li>
-                            <li><i>CH Robinson</i></li>
-                            <li><i>Fredrikson &amp; Byron, P.A.</i></li>
+                            <li><i>Cargill, Inc.</i></li>
+                            <li><i>Carl and Eloise Pohlad Family Foundation</i></li>
+                            <li><i>C.H. Robinson</i></li>
+                            <li><i>Culp Family Foundation</i></li>
+                            <li><i>Donaldson Company, Inc.</i></li>
+                            <li><i>Douglas & Wendy Dayton Foundation</i></li>
+                            <li><i>Douglass Brandenborg Family Foundation</i></li>
+                            <li><i>Fredrikson & Byron, P.A.</i></li>
+                            <li><i>Frey Foundation</i></li>
+                            <li><i>Flipgrid</i></li>
                             <li><i>General Mills Foundation</i></li>
+                            <li><i>Great Clips, Inc.</i></li>
                             <li><i>Heartland Investigative Group</i></li>
-                            <li><i>Leonard, Street and Deinard</i></li>
-                            <li><i>Lillehei Family Foundation</i></li>
+                            <li><i>John & Denise Graves Foundation</i></li>
+                            <li><i>Lillehei Family Charitable Foundation</i></li>
+                            <li><i>Literacy Matters</i></li>
+                            <li><i>Maguire Agency</i></li>
+                            <li><i>Medtronic</i></li>
                             <li><i>Minneapolis Foundation</i></li>
                             <li><i>Mulvehill Family Foundation</i></li>
+                            <li><i>Otto Bremer Foundation</i></li>
+                            <li><i>PwC</i></li>
+                            <li><i>Robins, Kaplan, Miller, & Ciresi Foundation for Children</i></li>
+                            <li><i>Ronald and Duska La Count Family Foundation</i></li>
+                            <li><i>Sanger Family Foundation</i></li>
+                            <li><i>Sauer Family Foundation</i></li>
                             <li><i>Schulze Family Foundation</i></li>
+                            <li><i>Smikis Foundation</i></li>
+                            <li><i>Stinson Leonard Street</i></li>
                             <li><i>The Lawlor Group</i></li>
-                            <li><i>Tierney Brothers Inc.</i></li>
+                            <li><i>Tierney Brothers, Inc.</i></li>
+                            <li><i>The Toro Foundation</i></li>
+                            <li><i>Ulteig</i></li>
+                            <li><i>Walter & Leona Schmitt Family Foundation</i></li>
                             <li><i>Walton Family Foundation</i></li>
+                            <li><i>WEM Foundation</i></li>
+                        </ul>
+                    </div>
+                    <div class='span5'>
+                        <p>
+                            <b>Tutoring Partners</b>
+                        </p>
+                        <ul class='unstyled'>
+                            <li><i>Apex</i></li>
+                            <li><i>Bassford Remele</i></li>
+                            <li><i>Cargill, Inc.</i></li>
+                            <li><i>C.H. Robinson</i></li>
+                            <li><i>Donaldson Company, Inc.</i></li>
+                            <li><i>PwC</i></li>
+                            <li><i>Target Corporation</i></li>
+                            <li><i>Ulteig</i></li>
                         </ul>
                     </div>
                 </div>
