--- a/about/staff.html
+++ b/about/staff.html
@@ -13,14 +13,18 @@ layout: default
                         <ul class='thumbnails'>
                             {% include person.html name="Rick Campion" role="Executive Director" %}
                             {% include person.html name="Chancey Anderson" role="Principal" %}
-                            {% include person.html name="Erica Jaastad" role="Academic Dean" %}
+                            {% include person.html name="Erica Jaastad" role="Curriculum Director" %}
                             {% include person.html name="Rachel Hemsey" role="Director of Operations" %}
                         </ul>
                         <ul class='thumbnails'>
                             {% include person.html name="Mary Barsness" role="Director of Student Services" %}
-                            {% include person.html name="Paris Kyles" role="Dean of Students" %}
-                            {% include person.html name="Skye Hoekstra" role="Dean of Teaching" %}
-                            {% include person.html name="Liz Ferguson" role="Assistant Principal" %}
+                            {% include person.html name="Paris Kyles" role="Director of Student Culture" %}
+                            {% include person.html name="Skye Hoekstra" role="Principal in Residence" %}
+                            {% include person.html name="Liz Ferguson" role="Principal in Residence" %}
+                        </ul>
+                        <ul class='thumbnails'>
+                            {% include person.html name="Tyler Baier" role="Chief Business Officer" %}
+                            {% include person.html name="Megan Miller" role="Director of Learning and Special Education Coordinator" %}
                         </ul>
                     </div>
                 </div>
@@ -28,7 +32,16 @@ layout: default
                 <div class='row-fluid'>
                     <div class='span12'>
                         <ul class='thumbnails'>
-                            {% include person.html name="Mandy Lindstrom" role="Teacher/Lead" %}
+                            {% include person.html name="Julia Ebbers" role="Classroom Teacher and Grade Team Chair" %}
+                            {% include person.html name="Billette Slaughter" role="Educational Assistant" %}
+                            {% include person.html name="Kallie Fitzloff" role="Classroom Teacher" %}
+                            {% include person.html name="Meredith Hennegan" role="Educational Assistant" %}
+                        </ul>
+                        <ul class='thumbnails'>
+                            {% include person.html name="Clara Fisher" role="Childcare Teacher" %}
+                            {% include person.html name="Laura Holtze" role="Educational Assistant" %}
+                            {% include person.html name="Annie Farley" role="Classroom Teacher" %}
+                            {% include person.html name="Maddie Kerch" role="Educational Assistant" %}
                         </ul>
                     </div>
                 </div>
@@ -36,9 +49,14 @@ layout: default
                 <div class='row-fluid'>
                     <div class='span12'>
                         <ul class='thumbnails'>
-                            {% include person.html name="Sara Gonzalez" role="Teacher" %}
-                            {% include person.html name="Jennifer Christensen" role="Teacher" %}
-                            {% include person.html name="Kallie Fitzloff" role="Teacher" %}
+                            {% include person.html name="Mercedes Lee" role="Classroom Teacher and Grade Team Chair" %}
+                            {% include person.html name="Jennifer Christensen" role="Classroom Teacher" %}
+                            {% include person.html name="Emma Lindley" role="Educational Assistant and Co-Teacher" %}
+                            {% include person.html name="Erin Engelhardt" role="Classroom Teacher" %}
+                        </ul>
+                        <ul class='thumbnails'>
+                            {% include person.html name="Emma Clement" role="Classroom Teacher" %}
+                            {% include person.html name="Ronisha Moore" role="Educational Assistant" %}
                         </ul>
                     </div>
                 </div>
@@ -46,10 +64,15 @@ layout: default
                 <div class='row-fluid'>
                     <div class='span12'>
                         <ul class='thumbnails'>
-                            {% include person.html name="Sarah Ehlen" role="Teacher" %}
-                            {% include person.html name="Emily Jones" role="Teacher / Grade Team Chair" %}
-                            {% include person.html name="Alex McCoy" role="Teacher" %}
-                            {% include person.html name="Amanda Laurent" role="Teacher" %}
+                            {% include person.html name="Emily Jones" role="Classroom Teacher and Grade Team Chair" %}
+                            {% include person.html name="Aaron Ziman" role="Educational Assistant" %}
+                            {% include person.html name="Alex McCoy" role="Classroom Teacher" %}
+                            {% include person.html name="Tiffany Bacon Pokela" role="Classroom Teacher" %}
+                        </ul>
+                        <ul class='thumbnails'>
+                            {% include person.html name="Sarah Ehlen" role="Classroom Teacher" %}
+                            {% include person.html name="Katie Laughlin" role="Classroom Teacher" %}
+                            {% include person.html name="Bria Grayer" role="Educational Assistant" %}
                         </ul>
                     </div>
                 </div>
@@ -57,9 +80,16 @@ layout: default
                 <div class='row-fluid'>
                     <div class='span12'>
                         <ul class='thumbnails'>
-                            {% include person.html name="Ryan Noshay" role="Teacher" %}
-                            {% include person.html name="Ashley Denaway" role="Teacher / Grade Team Chair" %}
-                            {% include person.html name="Rachel Dietsch" role="Teacher" %}
+                            {% include person.html name="Rachel Sand" role="Classroom Teacher and Grade Team Chair" %}
+                            {% include person.html name="Laquita Davis" role="Educational Assistant" %}
+                            {% include person.html name="Kelsey Sahutske" role="Classroom Teacher" %}
+                            {% include person.html name="Adrianna Landry" role="Educational Assistant" %}
+                        </ul>
+                        <ul class='thumbnails'>
+                            {% include person.html name="Matt Daniels" role="Classroom Teacher" %}
+                            {% include person.html name="Will DeBerg" role="Educational Assistant" %}
+                            {% include person.html name="Cortney Criter" role="Classroom Teacher (Interim Grade Team Chair)" %}
+                            {% include person.html name="Keisha Holmes" role="Educational Assistant" %}
                         </ul>
                     </div>
                 </div>
@@ -67,10 +97,36 @@ layout: default
                 <div class='row-fluid'>
                     <div class='span12'>
                         <ul class='thumbnails'>
-                            {% include person.html name="Emily Hoeppner" role="Teacher" %}
-                            {% include person.html name="Chad Ferguson" role="Teacher" %}
-                            {% include person.html name="Nicole Black" role="Teacher" %}
-                            {% include person.html name="Will McDuffie" role="Teacher" %}
+                            {% include person.html name="Emily Hoeppner" role="Classroom Teacher and Grade Team Chair" %}
+                            {% include person.html name="Will McDuffie" role="Classroom Teacher" %}
+                            {% include person.html name="Prescott Jones" role="Educational Assistant" %}
+                            {% include person.html name="Emily Shimota" role="Educational Assistant" %}
+                        </ul>
+                        <ul class='thumbnails'>
+                            {% include person.html name="Jill Nilsen" role="Classroom Teacher" %}
+                            {% include person.html name="Briana Moses" role="Classroom Teacher" %}
+                            {% include person.html name="Helen Peightal" role="Educational Assistant and Art Teacher" %}
+                            {% include person.html name="Marcas Dorsey" role="Educational Assistant" %}
+                        </ul>
+                        <ul class='thumbnails'>
+                            {% include person.html name="Missy Mathis" role="Educational Assistant" %}
+                            {% include person.html name="Zuli Morales" role="Educational Assistant" %}
+                            {% include person.html name="Shanequa Cook" role="Educational Assistant" %}
+                        </ul>
+                    </div>
+                </div>
+                <h3>Fourth Grade</h3>
+                <div class='row-fluid'>
+                    <div class='span12'>
+                        <ul class='thumbnails'>
+                            {% include person.html name="Sara Olson" role="Classroom Teacher and Instructional Leader" %}
+                            {% include person.html name="Allie Lawder" role="Educational Assistant and Co-Teacher" %}
+                            {% include person.html name="Ashley Denaway" role="Classroom Teacher and Instructional Leader" %}
+                            {% include person.html name="Blake Pederson" role="Educational Assistant" %}
+                        </ul>
+                        <ul class='thumbnails'>
+                            {% include person.html name="Chad Ferguson" role="Classroom Teacher and Instructional Leader" %}
+                            {% include person.html name="Matthew Klemme" role="Educational Assistant and Co-Teacher" %}
                         </ul>
                     </div>
                 </div>
@@ -78,30 +134,10 @@ layout: default
                 <div class='row-fluid'>
                     <div class='span12'>
                         <ul class='thumbnails'>
-                            {% include person.html name="Sean Mayberry" role="Fitness Teacher" %}
+                            {% include person.html name="Sean Mayberry" role="Fitness Support" %}
+                            {% include person.html name="Nick Brock" role="Fitness Educational Assistant" %}
                             {% include person.html name="Edward Schneider" role="Music Teacher" %}
-                        </ul>
-                    </div>
-                </div>
-                <h3>Classroom Support</h3>
-                <div class='row-fluid'>
-                    <div class='span12'>
-                        <ul class='thumbnails'>
-                            {% include person.html name="Emma Lindley" role="Educational Assistant" %}
-                            {% include person.html name="Shanequa Cook" role="Educational Assistant" %}
-                            {% include person.html name="Bella Troy" role="Educational Assistant" %}
-                            {% include person.html name="Sylvester Carver" role="Educational Assistant" %}
-                        </ul>
-                        <ul class='thumbnails'>
-                            {% include person.html name="Lisl von Steinbergs" role="Educational Assistant" %}
-                            {% include person.html name="Libby Sanders" role="Educational Assistant" %}
-                            {% include person.html name="Armani Wade" role="Educational Assistant" %}
-                            {% include person.html name="Laquita Davis" role="Educational Assistant" %}
-                        </ul>
-                        <ul class='thumbnails'>
-                            {% include person.html name="Aaron Ziman" role="Educational Assistant" %}
-                            {% include person.html name="Sara Olson" role="Educational Assistant / Co-Teacher" %}
-                            {% include person.html name="Andy Pokel" role="Educational Assistant / Co-Teacher" %}
+                            {% include person.html name="Armani Wade" role="Music Education Assistant" %}
                         </ul>
                     </div>
                 </div>
@@ -109,7 +145,8 @@ layout: default
                 <div class='row-fluid'>
                     <div class='span12'>
                         <ul class='thumbnails'>
-                            {% include person.html name="Jeff Stensrud" role="Behavioral Specialist" %}
+                            {% include person.html name="Sylvester Carver" role="Assistant Dean of Students" %}
+                            {% include person.html name="Jeff Stensrud" role="Assistant Dean of Students" %}
                         </ul>
                     </div>
                 </div>
@@ -117,29 +154,49 @@ layout: default
                 <div class='row-fluid'>
                     <div class='span12'>
                         <ul class='thumbnails'>
-                            {% include person.html name="Melissa Lindquist" role="English Language Learner Teacher" %}
-                            {% include person.html name="Stephanie Tracy" role="Learning Support Teacher" %}
-                            {% include person.html name="Taqwa Dardery" role="Social Worker" %}
+                            {% include person.html name="Melissa Lindquist" role="English Language Coordinator and English Language Development Teacher" %}
+                            {% include person.html name="Caroline Becker" role="Learning Support Teacher" %}
+                            {% include person.html name="Philip Troy" role="Learning Support Teacher" %}
                             {% include person.html name="Ann Bexell" role="Learning Support Teacher" %}
                         </ul>
                         <ul class='thumbnails'>
-                            {% include person.html name="Caroline Becker" role="Special Ed Teacher" %}
-                            {% include person.html name="Rina Lang" role="Learning Support Teacher" %}
-                            {% include person.html name="Philip Troy" role="Special Ed Teacher" %}
+                            {% include person.html name="Sarah Brunner" role="Learning Support Teacher" %}
+                            {% include person.html name="Ambrose Russell" role="Educational Assistant" %}
+                            {% include person.html name="Allen Mengis" role="Reading Specialist/ Learning Support Teacher" %}
+                            {% include person.html name="Michelle Staack" role="Math Specialist" %}
+                        </ul>
+                        <ul class='thumbnails'>
+                            {% include person.html name="Levi Martin" role="Educational Assistant" %}
+                            {% include person.html name="Taqwa Dardery" role="Social Worker and Diversity Coordinator" %}
+                            {% include person.html name="Dana Eichhorst" role="General Classroom Teacher" %}
                         </ul>
                     </div>
                 </div>
-                <h3>Support Staff</h3>
+                <h3>Operations Team</h3>
                 <div class='row-fluid'>
                     <div class='span12'>
                         <ul class='thumbnails'>
+                            {% include person.html name="Cory Voss" role="Operations Manager" %}
                             {% include person.html name="Adi Perez" role="Office Manager" %}
-                            {% include person.html name="Ahmisa Cuadros" role="Administrative Assistant" %}
-                            {% include person.html name="Kelly Mulvehill" role="Mindfulness and Yoga Teacher / External Relations" %}
-                            {% include person.html name="Anita Kimaiga" role="Tutoring Coordinator/New Alliance Fellow" %}
+                            {% include person.html name="Octavia McLaurin" role="Office Assistant" %}
+                            {% include person.html name="LeRoy Russell" role="Custodian" %}
                         </ul>
                         <ul class='thumbnails'>
-                            {% include person.html name="Carla Esquibel" role="HHM Coordinator" %}
+                            {% include person.html name="Tammy Flores" role="Custodian" %}
+                        </ul>
+                    </div>
+                </div>
+                <h3>School Support Team</h3>
+                <div class='row-fluid'>
+                    <div class='span12'>
+                        <ul class='thumbnails'>
+                            {% include person.html name="Kelly Mulvehill" role="Mindfulness/Wellness Director" %}
+                            {% include person.html name="Laura Durden" role="Advancement Manager" %}
+                            {% include person.html name="Mandy Lindstrom" role="Early Childhood Coordinator" %}
+                            {% include person.html name="Lahens St. Fleur" role="Student Recruiter" %}
+                        </ul>
+                        <ul class='thumbnails'>
+                            {% include person.html name="Anna Wagner" role="Volunteer Coordinator" %}
                         </ul>
                     </div>
                 </div>
