--- a/about/board.html
+++ b/about/board.html
@@ -21,6 +21,7 @@ layout: default
                             {% include person.html name="Jeff Klinefelter" role="Board Treasurer, Managing Director, Head of Global Equities at Piper Jaffray" %}
                             {% include person.html name="Lewis Remele" role="Board Secretary<br>Shareholder, Bassford Remele" %}
                             {% include person.html name="Maggie Skrypek" role="Board Chair<br>Research Scientist, Amherst H. Wilder Foundation" %}
+                            {% include person.html name="Darrell Thompson" role="President<br>Bolder Options" %}
                         </ul>
                     </div>
                 </div>
